纯CSS日出日落

--- a/index.html
+++ b/index.html
@@ -8,26 +8,82 @@ comments: false
 <section class="banner">
     <div class="collection-head">
         <div class="container">
-            <div class="collection-title">
-              <h1 class="collection-header" id="sub-title"><span>{{ site.subtitle }}</span></h1>
-                <div class="collection-info">
-                    <span class="meta-info mobile-hidden">
-                        <span class="octicon octicon-location"></span>
-                        {{ site.location }}
-                    </span>
-                    <span class="meta-info">
-                        <span class="octicon octicon-organization"></span>
-                        <a href="{{ site.organization_url }}" target="_blank">{{ site.organization }}</a>
-                    </span>
-                     <span class="meta-info">
-                        <span class="octicon octicon-mark-github"></span>
-                        <a href="https://github.com/{{ site.github_username }}" target="_blank">{{ site.github_username }}</a>
-                    </span>
+
+            <input type="radio" name="time" id="sunrise" checked />
+            <input type="radio" name="time" id="sunset" />
+            <div id="app">
+                <div class="glow"></div>
+                <div class="sky"></div>
+                <div class="stars"></div>
+                <div class="city">
+                    <div class="building">
+                        <div class="tower">
+                            <div class="windows"></div>
+                        </div>
+                        <div class="tower">
+                            <div class="windows"></div>
+                            <div class="ledge"></div>
+                        </div>
+                        <div class="tower">
+                            <div class="windows"></div>
+                        </div>
+                    </div>
+                    <div class="building">
+                        <div class="tower">
+                            <div class="windows"></div>
+                        </div>
+                        <div class="tower">
+                            <div class="windows"></div>
+                            <div class="ledge"></div>
+                        </div>
+                        <div class="tower">
+                            <div class="windows"></div>
+                            <div class="ledge"></div>
+                        </div>
+                    </div>
+                    <div class="building">
+                        <div class="tower">
+                            <div class="windows"></div>
+                        </div>
+                        <div class="tower">
+                            <div class="windows"></div>
+                            <div class="ledge"></div>
+                        </div>
+                        <div class="tower">
+                            <div class="windows"></div>
+                        </div>
+                    </div>
                 </div>
+                <div class="heavens">
+                    <label for="sunrise" class="sunrise" data-title="Sunrise"></label>
+                    <label for="sunset" class="sunset" data-title="Sunset"></label>
+                </div>
+                <div class="clouds"></div>
             </div>
+
+            <!--<div class="collection-title">-->
+              <!--<h1 class="collection-header" id="sub-title"><span>{{ site.subtitle }}</span></h1>-->
+                <!--<div class="collection-info">-->
+                    <!--<span class="meta-info mobile-hidden">-->
+                        <!--<span class="octicon octicon-location"></span>-->
+                        <!--{{ site.location }}-->
+                    <!--</span>-->
+                    <!--<span class="meta-info">-->
+                        <!--<span class="octicon octicon-organization"></span>-->
+                        <!--<a href="{{ site.organization_url }}" target="_blank">{{ site.organization }}</a>-->
+                    <!--</span>-->
+                     <!--<span class="meta-info">-->
+                        <!--<span class="octicon octicon-mark-github"></span>-->
+                        <!--<a href="https://github.com/{{ site.github_username }}" target="_blank">{{ site.github_username }}</a>-->
+                    <!--</span>-->
+                <!--</div>-->
+            <!--</div>-->
         </div>
     </div>
 </section>
+
+
+
 <!-- /.banner -->
 <section class="container content">
     <div class="columns">
