--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@ comments: false
 
 <section class="banner">
     <div class="collection-head">
-        <div class="container">
-
             <input type="radio" name="time" id="sunrise" checked />
             <input type="radio" name="time" id="sunset" />
             <div id="app">
@@ -59,8 +57,7 @@ comments: false
                     <label for="sunset" class="sunset" data-title="Sunset"></label>
                 </div>
                 <div class="clouds"></div>
-            </div>
-
+        <!--<div class="container">-->
             <!--<div class="collection-title">-->
               <!--<h1 class="collection-header" id="sub-title"><span>{{ site.subtitle }}</span></h1>-->
                 <!--<div class="collection-info">-->
@@ -78,7 +75,8 @@ comments: false
                     <!--</span>-->
                 <!--</div>-->
             <!--</div>-->
-        </div>
+        <!--</div>-->
+            </div>
     </div>
 </section>
 
