纯CSS日出日落

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ comments: false
                     </div>
                 </div>
                 <div class="heavens">
-                    <label for="sunrise" class="sunrise" data-title="Sunrise"></label>
-                    <label for="sunset" class="sunset" data-title="Sunset"></label>
+                    <label for="sunrise" class="sunrise" data-title="白天"></label>
+                    <label for="sunset" class="sunset" data-title="晚上"></label>
                 </div>
                 <div class="clouds"></div>
         <!--<div class="container">-->
