--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@ comments: false
                         </div>
                     </div>
                 </div>
+                <div class="times">
+                    <div class="time" data-sunrise="{{ site.time: '%H:%M:%S' }}" data-sunset="{{ site.time: '%H:%M:%S' }}"></div>
+                </div>
                 <div class="heavens">
                     <label for="sunrise" class="sunrise" data-title="白天"></label>
                     <label for="sunset" class="sunset" data-title="晚上"></label>
@@ -66,7 +69,7 @@ comments: false
                         <!--{{ site.location }}-->
                     <!--</span>-->
                     <!--<span class="meta-info">-->
-                        <!--<span class="octicon octicon-organization"></span>-->
+                        <!--SendEmailForPaymentExcelTask<span class="octicon octicon-organization"></span>-->
                         <!--<a href="{{ site.organization_url }}" target="_blank">{{ site.organization }}</a>-->
                     <!--</span>-->
                      <!--<span class="meta-info">-->
