关于《资深Web技术专家曹刘阳：2016年前端技术观察》的一些想法

--- a/index.html
+++ b/index.html
@@ -59,9 +59,6 @@ comments: false
                     <label for="sunset" class="sunset" data-title="晚上"></label>
                 </div>
                 <div class="clouds"></div>
-        <!--<div class="container">-->
-            <!--<div class="collection-title">-->
-              <!--<h1 class="collection-header" id="sub-title"><span>{{ site.subtitle }}</span></h1>-->
                 <div class="collection-info">
                     <span class="meta-info mobile-hidden">
                         <span class="octicon octicon-location"></span>
@@ -76,8 +73,6 @@ comments: false
                         <a href="https://github.com/{{ site.github_username }}" target="_blank">{{ site.github_username }}</a>
                     </span>
                 </div>
-            <!--</div>-->
-        <!--</div>-->
             </div>
     </div>
 </section>
@@ -86,7 +81,7 @@ comments: false
     var now = new Date(),
         hour = now.getHours(),
         minute = now.getUTCMinutes(),
-        time = hour+":"+minute;
+        time = hour + ":" + (minute > 10 ? minute : "0" + minute);
     $('.time').attr('data-sunrise',time).attr('data-sunset',time);
     //切换为夜晚
     if (hour < 7 || hour > 19) {
